make wikipedia link consistent

--- a/planet_gram.ipynb
+++ b/planet_gram.ipynb
@@ -357,7 +357,7 @@
     "... [0, 35, 89, 0]\n",
     "```\n",
     "\n",
-    "There is a free-use image from [Wikipedia](https://commons.wikimedia.org/wiki/File:Colombia_locator_map.svg) of Colombia in the `data/` directory, let's use that. "
+    "There is a free-use of a [Map of Colombia from Wikipedia](https://commons.wikimedia.org/wiki/File:Colombia_locator_map.svg) in the `data/` directory, let's use that. "
    ]
   },
   {
