Write file to disk

--- a/planet_gram.ipynb
+++ b/planet_gram.ipynb
@@ -27,7 +27,8 @@
     "1. Crop the image\n",
     "1. Create a lower resolution thumbnail\n",
     "1. Apply a color map\n",
-    "1. Apply my secret image effect 😎"
+    "1. Apply my secret image effect 😎\n",
+    "1. Write an image to disk"
    ]
   },
   {
@@ -525,14 +526,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2120bfd8-b4d4-4e52-a300-18d8b5b850ed",
+   "metadata": {},
+   "source": [
+    "## Step 7. Write an Image to Disk\n",
+    "\n",
+    "Finally, let's write 'colombia frog' to the `/output` directory, as 'colombia_frog.png'.\n",
+    "\n",
+    "To do this, we'll use a PIL function [Image.save](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.save). \n",
+    "\n",
+    "But first, we need to convert our masked array back into an Image object. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2579b776-d911-4c01-9a8b-3c61590b354c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resized_colombia_frog_image = Image.fromarray(resized_colombia_frog_raster)\n",
+    "resized_colombia_frog_image.save('output/colombia_frog.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1811ebfd-e411-45df-9d38-1f5f20bc7761",
    "metadata": {},
    "source": [
     "## Conclusion \n",
-    "Great Job! You've just learned how to display, crop, resize, mask, and color map images using Python, and a few well-known libraries.  \n",
+    "Great Job! You've just learned how to display, crop, resize, mask, color map, and save images using Python and some well-known libraries.  \n",
     "\n",
     "You are on your way to becoming PlanetGram's newest power poster! 😎"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfbb0327-a2cf-4f82-aa2f-f1324fba61f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
